درحال وارد کردن مشخصات شما بودم زبان اصلی فعال شد

--- a/README
+++ b/README
@@ -18,7 +18,19 @@ Fill out the specifed fields:
     "accounts": [
         {
             "name": "<NAME>", // Name you want to give the account
+            "address": "<Address>", /{آخرش درست میَه+
+    "priceCurrencyType": "<CURRENCY_TYPE>", // The currency prices are in. E.G. "usd", "gbp", "eur", etc. full list: https://www.coingecko.com/api/documentations/v3#/simple/get_simple_supported_vs_currencies
+    "volumeCurrencyType": "<CURRENCY_TYPE", // Same as above. This is the volume at the time of rewards
+    "from": "<YYYY.MM.DD>", // Starting date of rewards
+    "to": "<YYYYY.MM.DD>", // End date of rewards
+    "accounts": [saeid.sfadshg@gmail.com
+        {
+            "name": "<NAME>", //saeid.sfadsht@gmai.com Name you want to give the account
             "address": "<Address>", // Stash address of the validator or nominator
+            "role": "<ROLLE>" // either "nominator" or "validator"
+          }
+    ]
+}/ Stash address of the validator or nominator
             "role": "<ROLLE>" // either "nominator" or "validator"
           }
     ]
